--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/tailwind.css">
     <link rel="stylesheet" href="css/custom.css">
+    <title>QI</title>
   </head>
   <body>
 <div class="container mx-auto">
@@ -40,13 +41,11 @@
                               <div class="flex justify-around mt-5">
                                   <div>
                                       <label class="font-bold  uppercase mr-2">Básico</label>
-                                          <input type="radio" name="tipo" value="basico" checked>
-                                      </label>
+                                      <input type="radio" name="tipo" value="basico" checked>
                                   </div>
                                   <div>
                                       <label class="font-bold  uppercase mr-2">Completo</label>
-                                          <input type="radio" name="tipo" value="completo">
-                                      </label>
+                                      <input type="radio" name="tipo" value="completo">
                                   </div>
                               </div>
                       </fieldset>
